--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,84 @@
 site_name: My site
+site_description: haha
 site_url: https://loganqiu.github.io
 theme:
   name: material
+  features:
+    - navigation.indexes
+
+plugins:
+  - search
+  # - meta
+  - blog:
+      blog_toc: true
+      archive_date_format: MMMM yyyy
+      categories_allowed:
+        - Holidays
+        - News
+      # authors_profiles: true
+      # pagination_per_page: 5
+      # archive_pagination_per_page: 10
+      # categories_pagination_per_page: 10
+
+      # post_slugify: !!python/object/apply:ext.slugs.slugify
+      #   kwds:
+      #     short: true
+  - tags
+  - social:
+      cards_layout_options:
+        background_color: "#ff1493"
+  - rss:
+      match_path: "blog/posts/.*"
+      date_from_meta:
+        as_creation: date.created
+        as_update: date.updated
+
+extra:
+  social:
+    - icon: fontawesome/brands/mastodon
+      name: squidfunk on Mastodon
+      link: https://fosstodon.org/@squidfunk
+
+hooks:
+  - hooks/socialmedia.py
+
+nav:
+  - Home: index.md
+  - Tags: tags.md
+  - Blog:
+      - blog/index.md
+      - blog/tags.md
+
+markdown_extensions:
+  # Python Markdown
+  - abbr
+  - admonition
+  - attr_list
+  - def_list
+  - footnotes
+  - md_in_html
+  - tables
+  - toc:
+      permalink: true
+
+  # Python Markdown Extensions
+  - pymdownx.arithmatex:
+      generic: true
+  - pymdownx.betterem:
+      smart_enable: all
+  - pymdownx.caret
+  - pymdownx.details
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+  - pymdownx.highlight
+  - pymdownx.inlinehilite
+  - pymdownx.keys
+  - pymdownx.mark
+  - pymdownx.smartsymbols
+  - pymdownx.superfences
+  - pymdownx.tabbed:
+      alternate_style: true
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - pymdownx.tilde
