--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,57 @@
 site_name: My site
 site_description: haha
 site_url: https://loganqiu.github.io
+# Configuration
 theme:
   name: material
+  # custom_dir: material/overrides
   features:
+    - announce.dismiss
+    - content.action.edit
+    - content.action.view
+    - content.code.annotate
+    - content.code.copy
+    - content.code.select
+    # - content.footnote.tooltips
+    # - content.tabs.link
+    - content.tooltips
+    # - header.autohide
+    # - navigation.expand
+    # - navigation.footer
     - navigation.indexes
+    - navigation.instant
+    - navigation.instant.progress
+    - navigation.sections
+    - navigation.tabs
+    # - navigation.tabs.sticky
+    - navigation.top
+    - navigation.tracking
+    - search.highlight
+    - search.share
+    - search.suggest
+    - toc.follow
+  palette:
+    - media: "(prefers-color-scheme)"
+      toggle:
+        icon: material/circle-half-full
+        name: Switch to light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      primary: indigo
+      accent: indigo
+      toggle:
+        icon: fontawesome/solid/sun
+        name: Switch to dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      primary: black
+      accent: indigo
+      toggle:
+        icon: fontawesome/regular/moon
+        name: Switch to system preference
+  font:
+    text: Roboto
+    code: Roboto Mono
 
 plugins:
   - search
@@ -15,6 +62,8 @@ plugins:
       categories_allowed:
         - Holidays
         - News
+      post_readtime: false
+      post_author: false
       # authors_profiles: true
       # pagination_per_page: 5
       # archive_pagination_per_page: 10
@@ -35,9 +84,10 @@ plugins:
 
 extra:
   social:
-    - icon: fontawesome/brands/mastodon
-      name: squidfunk on Mastodon
-      link: https://fosstodon.org/@squidfunk
+    - icon: fontawesome/brands/bilibili
+      name: Dualvector_Foil
+      link: https://space.bilibili.com/439983453
+  generator: false
 
 hooks:
   - hooks/socialmedia.py
@@ -48,6 +98,11 @@ nav:
   - Blog:
       - blog/index.md
       - blog/tags.md
+
+extra_css:
+  - stylesheets/extra.css
+
+copyright: Copyright &copy; 2024 0x7C00
 
 markdown_extensions:
   # Python Markdown
@@ -67,6 +122,7 @@ markdown_extensions:
   - pymdownx.betterem:
       smart_enable: all
   - pymdownx.caret
+  - pymdownx.critic
   - pymdownx.details
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
@@ -76,7 +132,11 @@ markdown_extensions:
   - pymdownx.keys
   - pymdownx.mark
   - pymdownx.smartsymbols
-  - pymdownx.superfences
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
   - pymdownx.tabbed:
       alternate_style: true
   - pymdownx.tasklist:
