--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -63,7 +63,6 @@ plugins:
         - Holidays
         - News
       post_readtime: false
-      post_author: false
       # authors_profiles: true
       # pagination_per_page: 5
       # archive_pagination_per_page: 10
@@ -96,7 +95,15 @@ nav:
   - Home: index.md
   - Tags: tags.md
   - Wiki:
-      - Anime-Intro: wiki/Anime Intro.md
+      - wiki/index.md
+      - Anime Intro: wiki/anime-intro.md
+      - Bleach Inrto: wiki/bleach-intro.md
+      - Bleach Preface: wiki/bleach-preface.md
+      - Books Intro: wiki/books-intro.md
+      - Learn Git: wiki/learn-git.md
+      - Music Distribution: wiki/music-distribution.md
+      - Protocol: wiki/protocol.md
+      - Proxy Platform: wiki/proxy-platform.md
   - Blog:
       - blog/index.md
       - blog/tags.md
@@ -118,6 +125,7 @@ markdown_extensions:
   - def_list
   - footnotes
   - md_in_html
+  - nl2br # 取消忽略单一换行符，将单一换行符自动转换为<br>
   - tables
   - toc:
       permalink: true
@@ -126,7 +134,7 @@ markdown_extensions:
   - pymdownx.arithmatex:
       generic: true
   - pymdownx.betterem:
-      smart_enable: all
+      # smart_enable: all
   - pymdownx.caret
   - pymdownx.critic
   - pymdownx.details
